--- a/front/package.json
+++ b/front/package.json
@@ -1,31 +1,35 @@
 {
-  "name": "async",
-  "version": "0.0.1",
-  "private": true,
-  "devDependencies": {
-    "react-scripts": "^4.0.3"
-  },
-  "dependencies": {
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.2.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "2.13.8",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "test": "react-scripts test --env=node --passWithNoTests"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "async",
+    "version": "0.0.1",
+    "homepage": "https://IgnacioArmandUgon.github.io/mentoring35",
+    "private": true,
+    "devDependencies": {
+        "gh-pages": "^3.2.3",
+        "react-scripts": "^4.0.3"
+    },
+    "dependencies": {
+        "prop-types": "^15.7.2",
+        "react": "^17.0.2",
+        "react-bootstrap": "^2.2.2",
+        "react-dom": "^17.0.2",
+        "react-redux": "^7.2.0",
+        "redux": "^4.0.5",
+        "redux-devtools-extension": "2.13.8",
+        "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.3.0"
+    },
+    "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "eject": "react-scripts eject",
+        "test": "react-scripts test --env=node --passWithNoTests"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
