--- a/front/package.json
+++ b/front/package.json
@@ -1,7 +1,7 @@
 {
     "name": "async",
     "version": "0.0.1",
-    "homepage": "https://IgnacioArmandUgon.github.io/mentoring35",
+    "homepage": "https://IgnacioArmandUgon.github.io/mentoring35/front",
     "private": true,
     "devDependencies": {
         "gh-pages": "^3.2.3",
